--- a/src/components/layout/navBar/index.css
+++ b/src/components/layout/navBar/index.css
@@ -1,5 +1,148 @@
 .navBar {
+  position: sticky;
   display: flex;
-  background-color: #083263;
-  width: 100vw;
+  background: var(--color-primary-blue);
+  width: 100%;
+  height: 7vh;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
+}
+
+.text-login {
+  margin-right: 3rem;
+}
+span {
+  width: 3rem;
+  color: #ffff;
+  margin-left: 30px;
+  font-weight: 200;
+}
+span:hover {
+  color: #ffffffd0;
+}
+.links {
+  padding-left: 2vw;
+  flex: 1;
+}
+.user .user-info {
+  display: flex;
+  align-items: center;
+  margin-right: 8px;
+}
+.menuIcon {
+  display: none;
+}
+
+.profile {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin-right: -20px;
+  border-radius: 60%;
+  object-fit: cover;
+}
+.userName {
+  margin-right: 3rem;
+  cursor: pointer;
+}
+.dropdown {
+  position: absolute;
+  top: 7vh;
+  width: 10rem;
+  right: 0;
+  background-color: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 2;
+}
+
+.dropdown button {
+  width: 100%;
+  padding: 10px;
+  text-align: left;
+  border: none;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.dropdown button:hover {
+  background-color: #f9f9f9;
+}
+@media (max-width: 1000px) {
+  .navBar {
+    position: relative;
+    display: flex;
+    background-color: #083263;
+    width: 100vw;
+    height: 7vh;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .text-login {
+    margin-right: 0.3rem;
+  }
+  .menuIcon {
+    display: block;
+    cursor: pointer;
+    border: none;
+    background: none;
+    padding: 0;
+  }
+
+  .menuIcon:focus {
+    outline: none;
+  }
+
+  .menuIcon.open .menuLine:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .menuIcon.open .menuLine:nth-child(2) {
+    opacity: 0;
+  }
+
+  .menuIcon.open .menuLine:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .menuLine {
+    width: 30px;
+    height: 2px;
+    margin-bottom: 4px;
+    background-color: white;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+  }
+
+  .links {
+    display: none;
+  }
+
+  .links.open {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #083263;
+    width: 96%;
+    z-index: 999;
+    transition: all 3ms ease;
+    padding-right: 2%;
+  }
+
+  .links a {
+    padding: 10px;
+    border-bottom: 1px solid #fff;
+    text-align: center;
+  }
+  .links a:hover {
+    background-color: #0a315d89;
+  }
+
+  .links a:last-child {
+    border-bottom: none;
+  }
+
+  .navBar.open {
+    height: 100vh; /* Definindo a altura total da página */
+  }
 }
