--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+:root {
+  --color-primary-blue: #083263;
+  --color-secondary-blue: #143679;
+  --color-secondary-cyan: #0e639a;
+  --color-secondary-hover: #ffffffd0;
+  --color-secondary-palatine: #e7e2da;
+}
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
   font-weight: 100;
   font-style: normal;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  list-style: none;
+}
+
+@media (max-width: 500px) {
+  body {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+  }
+  #root {
+    flex: 1;
+    width: 100%;
+    height: 100%;
+  }
 }
