--- a/src/components/layout/navBar/index.css
+++ b/src/components/layout/navBar/index.css
@@ -1,5 +1,4 @@
 .navBar {
-  position: sticky;
   display: flex;
   background: var(--color-primary-blue);
   width: 100%;
@@ -24,6 +23,9 @@ span:hover {
 .links {
   padding-left: 2vw;
   flex: 1;
+}
+.links a[href^="#"] {
+  scroll-behavior: smooth;
 }
 .user .user-info {
   display: flex;
@@ -52,7 +54,7 @@ span:hover {
   right: 0;
   background-color: #fff;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 2;
+  z-index: 99999;
 }
 
 .dropdown button {
