--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ body {
   font-weight: 100;
   font-style: normal;
   padding: 0;
+  box-sizing: border-box;
+}
+html {
+  scroll-behavior: smooth;
 }
 
 a {
