--- a/src/components/layout/postForm/PostForm.css
+++ b/src/components/layout/postForm/PostForm.css
@@ -1,54 +1,99 @@
-/* PostForm.css */
-
+/* Container principal do formulário */
 .PostForm {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 90%; /* Reduz a largura máxima */
+  max-height: 80vh; /* Ajusta a altura máxima do formulário */
+  margin: 0 auto;
+  padding: 15px; /* Reduz o padding */
+  background: var(--color-secondary-palatine);
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  overflow-y: auto; /* Adiciona rolagem vertical se necessário */
+}
+
+/* Título do formulário */
+.PostForm h2 {
+  font-weight: 400;
+  font-size: 1.25rem; /* Reduz o tamanho da fonte */
+  color: var(--color-secondary-blue);
+  margin-bottom: 15px; /* Reduz a margem inferior */
+}
+
+/* Estilo para o campo de título */
+#title {
+  border: none;
+  border-radius: 4px; /* Reduz o raio da borda */
+}
+
+/* Estilo para os grupos de campos do formulário */
+.form-group {
+  margin-bottom: 15px; /* Reduz a margem inferior */
+}
+
+/* Rótulos dos campos */
+.form-group label {
+  display: block;
+  margin-bottom: 4px; /* Reduz a margem inferior */
+  font-weight: bold;
+  color: var(--color-secondary-blue);
+  font-size: 0.875rem; /* Reduz o tamanho da fonte */
+}
+
+/* Estilo geral para campos de texto e textarea */
+.form-group input[type="text"],
+.form-group textarea {
+  width: calc(100% - 12px); /* Ajuste para compensar a borda */
+  padding: 8px; /* Reduz o padding */
+  margin-bottom: 8px; /* Reduz a margem inferior */
+  border: 1px solid #ccc;
+  border-radius: 4px; /* Reduz o raio da borda */
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); /* Ajusta a sombra */
+  font-size: 14px; /* Reduz o tamanho da fonte */
+  box-sizing: border-box; /* Inclui padding e border no cálculo da largura */
+}
+
+.form-group input[type="text"]:focus,
+.form-group textarea:focus {
+  outline: none; /* Removendo a borda de foco padrão */
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3), 0 1px 2px rgba(0, 0, 0, 0.1); /* Adiciona sombra ao foco */
+}
+
+/* Estilo específico para o campo de texto de múltiplas linhas */
+.form-group textarea {
+  resize: vertical; /* Permite redimensionar verticalmente */
+  height: 10px; /* Reduz a altura mínima */
+}
+
+/* Estilo para o botão de envio */
+button[type="submit"] {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 8px 16px; /* Reduz o padding */
+  cursor: pointer;
+  border-radius: 3px;
+  font-size: 14px; /* Reduz o tamanho da fonte */
+  transition: background-color 0.3s ease;
+}
+
+/* Efeito hover para o botão */
+button[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+/* Adicione uma mídia query para telas menores, se necessário */
+@media (max-width: 768px) {
+  .PostForm {
+    padding: 10px; /* Reduz o padding em telas menores */
   }
-  
+
   .PostForm h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 1.1rem; /* Reduz o tamanho da fonte em telas menores */
   }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
+
   .form-group input[type="text"],
   .form-group textarea {
-    width: 100%;
-    padding: 8px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
+    padding: 6px; /* Reduz o padding em telas menores */
+    width: calc(100% - 12px); /* Ajusta o largura em telas menores */
   }
-  
-  .form-group textarea {
-    resize: vertical;
-  }
-  
-  button[type="submit"] {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 3px;
-    font-size: 16px;
-  }
-  
-  button[type="submit"]:hover {
-    background-color: #0056b3;
-  }
-  
+}
