--- a/src/views/pages/Forum/index.css
+++ b/src/views/pages/Forum/index.css
@@ -3,19 +3,27 @@
   font-family: 'Arial', sans-serif;
   color: #333;
   background-color: #f9f9f9;
-  padding: 20px;
-}
 
-/* Cabeçalho ou flag */
-.Forum .Flag {
-  margin-bottom: 20px;
+}/*Banner*/
+.forumBanner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 28vh;
+  grid-column: span 2;
+  background: var(--color-secondary-palatine);
+}
+.post-actions{
+  padding: 10px;
 }
 
 /* Contêiner do conteúdo do fórum */
 .forum-content {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 5px;
 }
 
 /* Botão para abrir o modal */
