--- a/src/views/pages/TrabalheConosco/index.css
+++ b/src/views/pages/TrabalheConosco/index.css
@@ -33,7 +33,7 @@
 
 /* Estilos para o título */
 .title {
-  text-align: center;
+  text-align: justify;
   width: 40%;
   font-weight: 400;
   font-size: 1.3rem;
