--- a/src/components/layout/psychologistCard/index.css
+++ b/src/components/layout/psychologistCard/index.css
@@ -16,6 +16,7 @@
 }
 
 .psicologo-image {
+  margin-top: 1.5rem;
   width: 6rem;
   height: 6rem;
   border-radius: 50%;
@@ -32,7 +33,7 @@
 
 .psicologo-info h2 {
   font-size: 1.2rem;
-  margin-bottom: 5px;
+  margin-bottom: 1rem;
 }
 
 .psicologo-info p {
@@ -57,15 +58,16 @@
 }
 
 .psicologo-card button {
-  background-color: var(--color-secondary-cyan);
+  margin-top: 2vh;
+  width: 100%;
+  padding: 10px;
+  background: var(--color-secondary-cyan);
   color: #fff;
+  font-size: 1rem;
   border: none;
-  height: 2rem;
-  padding: 8px 16px;
-  border-radius: 4px;
+  border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  text-align: center;
 }
 
 .psicologo-card button:hover {
